--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -34,6 +34,9 @@
         box-sizing: border-box;
         font-size: 13px;
       }
+      input[type="number"] {
+        width: 100%;
+      }
       button {
         width: 100%;
         padding: 10px;
@@ -106,6 +109,14 @@
     <p style="font-size: 12px; color: #999; margin-bottom: 15px">
       Navigate to a SofaScore tournament page to export data.
     </p>
+
+    <div class="input-group">
+      <label for="historyMatches">Player History (matches)</label>
+      <input type="number" id="historyMatches" min="1" max="500" value="200" />
+      <div style="font-size: 11px; color: #777; margin-top: 5px">
+        Max number of past matches per player
+      </div>
+    </div>
 
     <button id="fetchBtn">Fetch TT Elite Series</button>
 
