updates to get past and future matches and fix dates

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -118,6 +118,14 @@
       </div>
     </div>
 
+    <div class="input-group">
+      <label for="pastMatchesDate">Tournament Past Events Since</label>
+      <input type="date" id="pastMatchesDate" />
+      <div style="font-size: 11px; color: #777; margin-top: 5px">
+        Fetch tournament matches from this date onwards
+      </div>
+    </div>
+
     <button id="fetchBtn">Fetch TT Elite Series</button>
 
     <div id="status"></div>
