update where we fetch tournament data and parallel processing

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -119,10 +119,10 @@
     </div>
 
     <div class="input-group">
-      <label for="pastMatchesDate">Tournament Past Events Since</label>
+      <label for="pastMatchesDate">Tournament Date</label>
       <input type="date" id="pastMatchesDate" />
       <div style="font-size: 11px; color: #777; margin-top: 5px">
-        Fetch tournament matches from this date onwards
+        Date of desired TT Elite Series tournament
       </div>
     </div>
 
